<resources>
    <string name="app_name">VecinosVigilantes</string>
    <string name="title_activity_pantalla_inicio">PantallaInicio</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vecinos_vigilantes">Vecinos Vigilantes</string>
    <string name="inicia_sesion">Inicia Sesión</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="registrate">Regístrate aquí</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_mapa_usuario">MapaUsuario</string>
</resources>