<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesionActivity">

    <LinearLayout
        style="@style/fondoApp"
        android:layout_width="415dp"
        android:layout_height="745dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato"
            android:text="@string/vecinos_vigilantes"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/real_estate_purchase" />

        <LinearLayout
            style="@style/cardInicioSesion"
            android:layout_width="355dp"
            android:layout_height="510dp"
            android:layout_marginStart="30dp"

            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/inicia_sesion"
                android:textAlignment="center"
                android:textColor="@color/light_blue_A400"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:importantForAccessibility="no"
                    app:srcCompat="@drawable/_icon__mail_" />

                <EditText
                    android:id="@+id/correoUsuarioInicio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:hint="@string/correo_electronico"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:importantForAccessibility="no"
                    app:srcCompat="@drawable/icon__lock_" />

                <EditText
                    android:id="@+id/contraUsuarioInicio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/contrasenia"
                    android:inputType="textPassword"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_marginStart="215dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/lato"
                android:onClick="iniciarRegistroActivity"
                android:text="@string/registrate"
                android:textAlignment="textEnd"
                android:textColor="@color/light_blue_A400"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnIniciarSesion"
                style="@style/fondoBoton"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/fondobotones"
                android:fontFamily="@font/lato"
                android:onClick="iniciarSesion"
                android:text="@string/entrar"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>